change favicon, solves warnning tippyjs, and custom scrollbar

--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -4,20 +4,25 @@
   --search-top-spacer: 9px;
   --search-button-width: 52px;
 
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   width: 100%;
-  height: var(--default-layout-header-height, 60px);
+  height: var(--default-layout-header-height);
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+  background-color: var(--white);
+  z-index: 10;
 }
 
 .inner {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 var(--default-layout-horizontal-spacer);
-  height: 100%;
   width: var(--default-layout-width, 1150px);
+  height: 100%;
+  padding: 0 var(--default-layout-horizontal-spacer);
 }
 
 .logo-link {
